# zin-init

./: CHEATSHEET.md  CLI_DOCS.md  Cargo.toml  INSTALLER_DOCS.md  LICENSE  README.md  build.sh  install.sh  installer.py  zin-quick.sh
examples/: services.toml
examples/services.d/: docker.toml  network.toml  nginx.toml  postgresql.toml  sshd.toml
src/: daemon.rs  lib.rs  main.rs
src/backends/: backend.rs  mod.rs  openrc.rs  systemd.rs  sysv.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: format.rs  manager.rs  mod.rs  service.rs
src/core/: engine.rs  logging.rs  mod.rs  service.rs  state.rs
src/hardware/: detector.rs  mod.rs  types.rs
src/rollback/: checkpoint.rs  manager.rs  mod.rs
