[package]
name = "zin"
version = "0.1.0"
edition = "2021"
authors = ["ZIN Project Contributors"]
description = "Легковесная декларативная init-система для Linux с поддержкой различных бэкендов"
license = "MIT"
repository = "https://github.com/zin-init/zin"
keywords = ["init", "systemd", "openrc", "linux", "boot"]
categories = ["command-line-utilities", "os"]

[dependencies]
# Сериализация/десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Асинхронность
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Логирование
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Работа с железом
hwloc = { version = "2.0", features = ["v2_0"] }
sysinfo = "0.30"

# CLI
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"

# Утилиты
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.27", features = ["fs", "process", "signal"] }
libc = "0.2"
walkdir = "2.4"
filetime = "0.2"

# Для работы с systemd
systemd-zbus = { version = "5.0", optional = true }
zbus = { version = "4.0", optional = true }

[features]
default = ["full"]
full = ["systemd-backend", "openrc-backend", "sysv-backend"]
systemd-backend = ["zbus"]
openrc-backend = []
sysv-backend = []

[[bin]]
name = "zin"
path = "src/main.rs"

[[bin]]
name = "zind"
path = "src/daemon.rs"

[lib]
name = "zin_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0
debug = true
